--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ body {
   /* justify-content: center; */
   font-size: 62.5%;
   background-color: white;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   flex-wrap: nowrap;
   width: 100%;
 }
@@ -31,7 +31,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 30px 0 10px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-size: 2rem;
   margin: 20px;
   width: auto;
@@ -43,7 +43,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 20px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-size: 2rem;
   width: auto;
 }
@@ -52,7 +52,7 @@ body {
 h1 {
   color: #282c34;
   font-size: 5rem;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h2 {
